2017-03-05  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c:
	  - Pointer at the center of top and bottom margin enables you to move
	    the window instead of pressing Alt+Button1.
	  - 'check_inc' argument (which is Display::is_resizing) is added to
	    check_resize().

	* ui_layout.c:
	  - Rounding up 'separator' is prohibited if
	    'total < separator + margin + next_win' in modify_separator().
	  - MANAGE_SUB_WINDOWS_BY_MYSELF => MANAGE_ROOT_WINDOWS_BY_MYSELF
	    in change_sb_mode_intern().

	* ui_window.c: check_update_children() is added to redraw screen correctly
	  on wayland.

	* */ui.h, ui_layout.c, wayland/ui_window.c: NO_EXPOSE_ON_RESIZE is removed.

2017-03-05  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: ui_window_update_all(ui_screen_t) instead of
	  ui_window_update_all(ui_layout_t) is called in window_resized().

	* ui_main_config.c: ONLY_USE_UNICODE_FONT and ONLY_USE_UNICODE_BOXDRAW_FONT
	  are set if ui_is_using_aafont() is true.

	* ui_layout.c: Even if a child window is not resized by resizing its parent,
	  ui_window_update_all() is called in reset_layout on wayland.

	* wayland/ui_window.c: ui_window_update_all() is called at the end of
	  ui_window_show() on wayland. Without this, screen isn't drawn in startup.

2017-03-05  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c:
	  ui_display_resize() calls wl_display_roundtrip() internally.

	* wayland/ui_window.c: ui_window_set_normal_hints() is implemented.

2017-03-05  Araki Ken  <arakiken@users.sf.net>

	* mc_im.c: get_im_info() is fixed.

	* ui_screen.c:
	  - "use_aafont" is added to OSC 5380/5381.
	  - ui_window_update_all(ui_layout_t) instead of ui_window_update_all(ui_screen_t)
	    is called in window_resized().

	* ui_font_config.[ch]: ui_is_using_aafont() is added.

	* mc_font.c: get_font_file() returns "*aafont" if use_aafont option is true.

	* wayland/ui_display.c: Minor fixes.

2017-03-04  Araki Ken  <arakiken@users.sf.net>

	* ui.h, ui_display.c: